[시스템 안정화 및 능력 로직 버그 수정]
- 기능 작업 -
기존 기능 수정
   ㄴ GameManager.java - 게임 종료 시 플레이어의 버프(포션 효과) 및 화창 상태 초기화 로직 추가
   ㄴ ArenaManager.java - 라운드 종료 시 자기장 축소 애니메이션이 즉시 중지되도록 개선

- 능력 작업 -
기존 능력 수정
   ㄴ 아이젠 소스케 - 영창 중이 아닐 때 실패 메시지가 출력되는 예외 처리 추가 (AizenSosuke.java)
   ㄴ 메이 - 능력 설명(Description) 헤더 및 문구 최신화 (May.java)

- 리소스팩 작업 -
(해당 사항 없음)